# jenga-bench

./: .gitignore  CODING_PLAN.md  DESIGN.md  Dockerfile.physics  README.md  adapter.py  benchanything.json  env.py  pyproject.toml  requirements.txt
auxiliary/: adapter.py  benchanything.json  env.py
docs/: CODING_PLAN.md  DESIGN.md  LOCAL_DEV.md
jenga/: __init__.py  render.py  settings.py  sim.py  textures.py  tower.py
showcase/: README.md  data-viewer.html  server.py
showcase/data/: 8dfa6085-5301-40b4-a8c7-570ed06d978b.json
showcase/static/: app.js  index.html  styles.css
tests/: test_inspector.py  test_milestone1.py  test_milestone2.py  test_milestone3.py  test_replay.py
